--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,10 @@
   "license": "TBA",
   "dependencies": {
     "@material-ui/core": "^1.3.0",
-    "@types/d3": "^4.13.0",
+    "@types/d3": "^5.7.2",
     "@types/express": "^4.16.0",
     "@types/googlemaps": "^3.30.10",
-    "@types/jquery": "^3.3.4",
+    "@types/jquery": "^3.3.38",
     "@types/lodash": "^4.14.110",
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^8.10.20",
@@ -30,17 +30,18 @@
     "@types/react-router-dom": "^4.2.7",
     "@types/react-table": "^6.7.11",
     "@types/webpack-env": "^1.13.6",
+    "@types/bootstrap": "^4.3.2",
     "alt": "^0.18.6",
     "alt-utils": "^2.0.0",
     "autoprefixer": "^8.6.4",
     "axios": "^0.19.2",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.4.1",
     "circular-json": "^0.5.4",
     "cross-env": "^5.2.0",
     "cytoscape": "^3.2.14",
-    "d3": "^4.13.0",
-    "d3-sankey": "^0.7.1",
+    "d3": "^5.16.0",
+    "d3-sankey": "^0.12.3",
     "ejs": "^2.6.1",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
@@ -53,8 +54,6 @@
     "match-sorter": "^2.2.3",
     "material-ui": "^0.20.1",
     "material-ui-chip-input": "^0.18.8",
-    "neo4j-driver": "^1.6.1",
-    "nilssongames-tetris": "^1.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "postcss-loader": "^2.1.5",
@@ -74,10 +73,12 @@
     "react-table": "^6.8.6",
     "react-tap-event-plugin": "^3.0.3",
     "tether": "^1.4.4",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "three": "0.101.0",
+    "threact": "^0.5.0",
+    "react-native-image-mapper": "^0.1.11"
   },
   "devDependencies": {
-    "@types/bootstrap": "^4.1.1",
     "awesome-typescript-loader": "^3.5.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -101,7 +102,7 @@
     "file-loader": "^1.1.11",
     "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.14.1",
     "nodemon": "^1.17.5",
@@ -111,7 +112,7 @@
     "style-loader": "^0.19.1",
     "transfer-webpack-plugin": "^0.1.4",
     "ts-loader": "^3.5.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.8.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.2",
     "webpack-cli": "^2.1.5",
