--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,7 +76,10 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "three": "0.101.0",
     "threact": "^0.5.0",
-    "react-native-image-mapper": "^0.1.11"
+    "react-native-image-mapper": "^0.1.11",
+    "three-stl-loader": "^1.0.6",
+    "orbit-controls": "^1.2.4",
+    "perspective-camera": "^2.0.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.5.0",
