--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   "author": "Markus Joppich",
   "license": "TBA",
   "dependencies": {
-    "@material-ui/core": "^1.3.0",
+    "@material-ui/core": "^4.9.13",
     "@types/d3": "^5.7.2",
     "@types/express": "^4.16.0",
     "@types/googlemaps": "^3.30.10",
@@ -25,18 +25,15 @@
     "@types/lodash": "^4.14.110",
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^8.10.20",
-    "@types/react": "^16.4.3",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/react-table": "^6.7.11",
-    "@types/webpack-env": "^1.13.6",
-    "@types/bootstrap": "^4.3.2",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/webpack-env": "^1.15.2",
     "alt": "^0.18.6",
     "alt-utils": "^2.0.0",
     "autoprefixer": "^8.6.4",
     "axios": "^0.19.2",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.4.1",
     "circular-json": "^0.5.4",
     "cross-env": "^5.2.0",
     "cytoscape": "^3.2.14",
@@ -55,45 +52,45 @@
     "material-ui": "^0.20.1",
     "material-ui-chip-input": "^0.18.8",
     "popper": "^1.0.1",
-    "popper.js": "^1.14.3",
+    "@popperjs/core": "^2.4.0",
     "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
     "pycollections": "^0.9.0",
-    "react": "^16.4.1",
+    "react": "^16.13.1",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-google-maps": "^9.4.5",
     "react-input-range": "^1.3.0",
-    "react-mixin": "^4.0.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scroll": "^1.7.9",
-    "react-scrollable-anchor": "^0.5.0",
-    "react-table": "^6.8.6",
-    "react-tap-event-plugin": "^3.0.3",
+    "react-mixin": "^5.0.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.7.16",
+    "react-scrollable-anchor": "^0.6.1",
+    "react-table-6": "^6.11.0",
     "tether": "^1.4.4",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "three": "0.101.0",
     "threact": "^0.5.0",
-    "react-native-image-mapper": "^0.1.11",
     "three-stl-loader": "^1.0.6",
     "orbit-controls": "^1.2.4",
     "perspective-camera": "^2.0.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.5.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-native-modules": "^6.9.4",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "babel-loader": "^8.1.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-function-sent": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/register": "^7.9.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "env-cmd": "^10.1.0",
@@ -104,22 +101,22 @@
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "font-awesome-loader": "^1.0.2",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "nodemon": "^1.17.5",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.12.21",
     "sass-loader": "^7.0.3",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.1",
     "transfer-webpack-plugin": "^0.1.4",
-    "ts-loader": "^3.5.0",
+    "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.12.2",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^1.7.2",
     "webpack-provides-module": "^1.0.2"
   }
