--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,7 @@
         "baseUrl": "./src",
         "allowSyntheticDefaultImports": true,
       },
+    "exclude": ["node_modules"],
     "include": [
         "./src/**/*"
     ]
