--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
   "author": "Markus Joppich",
   "license": "TBA",
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@types/d3": "^5.7.2",
     "@types/express": "^4.16.0",
     "@types/googlemaps": "^3.30.10",
@@ -74,7 +75,8 @@
     "threact": "^0.5.0",
     "three-stl-loader": "^1.0.6",
     "orbit-controls": "^1.2.4",
-    "perspective-camera": "^2.0.1"
+    "perspective-camera": "^2.0.1",
+    "material-table": ">=1.57.2"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
