png_path links to small.tif.png

--- a/server/config.json
+++ b/server/config.json
@@ -3,7 +3,7 @@
         "id": 0,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-2.tif.info",
         "plaqueRate": 0.483,
@@ -13,7 +13,7 @@
         "id": 1,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_8-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_8-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_8-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_8-2.tif.info",
         "plaqueRate": 0.605,
@@ -23,7 +23,7 @@
         "id": 2,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_6-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_6-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_6-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_6-1.tif.info",
         "plaqueRate": 0.477,
@@ -33,7 +33,7 @@
         "id": 3,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-2.tif.info",
         "plaqueRate": 0.248,
@@ -43,7 +43,7 @@
         "id": 4,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-1.tif.info",
         "plaqueRate": 0.766,
@@ -53,7 +53,7 @@
         "id": 5,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_6-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_6-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_6-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_6-2.tif.info",
         "plaqueRate": 0.675,
@@ -63,7 +63,7 @@
         "id": 6,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-1.tif.info",
         "plaqueRate": 0.611,
@@ -73,7 +73,7 @@
         "id": 7,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_2-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_2-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_2-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_2-1.tif.info",
         "plaqueRate": 0.281,
@@ -83,7 +83,7 @@
         "id": 8,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_9-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_9-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_9-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_9-1.tif.info",
         "plaqueRate": 0.544,
@@ -93,7 +93,7 @@
         "id": 9,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_4-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_4-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_4-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_4-1.tif.info",
         "plaqueRate": 0.722,
@@ -103,7 +103,7 @@
         "id": 10,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_5-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_5-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_5-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_5-1.tif.info",
         "plaqueRate": 0.189,
@@ -113,7 +113,7 @@
         "id": 11,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_10-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_10-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_10-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_10-1.tif.info",
         "plaqueRate": 0.624,
@@ -123,7 +123,7 @@
         "id": 12,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_4-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_4-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_4-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_4-2.tif.info",
         "plaqueRate": 0.748,
@@ -133,7 +133,7 @@
         "id": 13,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_2-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_2-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_2-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_2-2.tif.info",
         "plaqueRate": 0.12,
@@ -143,7 +143,7 @@
         "id": 14,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-3.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_1-3.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-3.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_1-3.tif.info",
         "plaqueRate": 0.075,
@@ -153,7 +153,7 @@
         "id": 15,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_8-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_8-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_8-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_8-1.tif.info",
         "plaqueRate": 0.78,
@@ -163,7 +163,7 @@
         "id": 16,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_5-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_5-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_5-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_5-2.tif.info",
         "plaqueRate": 0.671,
@@ -173,7 +173,7 @@
         "id": 17,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_4-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_4-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_4-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_4-1.tif.info",
         "plaqueRate": 0.314,
@@ -183,7 +183,7 @@
         "id": 18,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_7-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_7-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_7-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_7-2.tif.info",
         "plaqueRate": 0.705,
@@ -193,7 +193,7 @@
         "id": 19,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-3.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-3.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-3.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-3.tif.info",
         "plaqueRate": 0.567,
@@ -203,7 +203,7 @@
         "id": 20,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-1.tif.info",
         "plaqueRate": 0.338,
@@ -213,7 +213,7 @@
         "id": 21,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_10-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_10-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_10-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_10-2.tif.info",
         "plaqueRate": 0.607,
@@ -223,7 +223,7 @@
         "id": 22,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_5-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_5-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_5-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_5-1.tif.info",
         "plaqueRate": 0.539,
@@ -233,7 +233,7 @@
         "id": 23,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_8-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_8-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_8-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_8-1.tif.info",
         "plaqueRate": 0.371,
@@ -243,7 +243,7 @@
         "id": 24,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_4-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_4-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_4-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_4-2.tif.info",
         "plaqueRate": 0.037,
@@ -253,7 +253,7 @@
         "id": 25,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_10-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_10-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_10-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_10-2.tif.info",
         "plaqueRate": 0.681,
@@ -263,7 +263,7 @@
         "id": 26,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-3.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_1-3.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-3.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_1-3.tif.info",
         "plaqueRate": 0.408,
@@ -273,7 +273,7 @@
         "id": 27,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_3-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_3-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_3-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_3-2.tif.info",
         "plaqueRate": 0.097,
@@ -283,7 +283,7 @@
         "id": 28,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_7-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_7-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_7-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_7-2.tif.info",
         "plaqueRate": 0.24,
@@ -293,7 +293,7 @@
         "id": 29,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_9-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_9-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_9-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_9-2.tif.info",
         "plaqueRate": 0.679,
@@ -303,7 +303,7 @@
         "id": 30,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_6-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_6-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_6-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_6-2.tif.info",
         "plaqueRate": 0.245,
@@ -313,7 +313,7 @@
         "id": 31,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_3-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_3-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_3-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_3-1.tif.info",
         "plaqueRate": 0.173,
@@ -323,7 +323,7 @@
         "id": 32,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_10-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_10-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_10-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_10-1.tif.info",
         "plaqueRate": 0.757,
@@ -333,7 +333,7 @@
         "id": 33,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_3-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_3-2.tif.info",
         "plaqueRate": 0.6,
@@ -343,7 +343,7 @@
         "id": 34,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_8-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_8-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_8-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_8-2.tif.info",
         "plaqueRate": 0.262,
@@ -353,7 +353,7 @@
         "id": 35,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_7-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_7-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_7-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_7-1.tif.info",
         "plaqueRate": 0.431,
@@ -363,7 +363,7 @@
         "id": 36,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_6-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_6-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_6-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_6-1.tif.info",
         "plaqueRate": 0.783,
@@ -373,7 +373,7 @@
         "id": 37,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-1.tif.info",
         "plaqueRate": 0.603,
@@ -383,7 +383,7 @@
         "id": 38,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_5-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_5-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_5-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_5-2.tif.info",
         "plaqueRate": 0.287,
@@ -393,7 +393,7 @@
         "id": 39,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_7-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_7-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_7-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_7-1.tif.info",
         "plaqueRate": 0.687,
@@ -403,7 +403,7 @@
         "id": 40,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-2.tif.info",
         "plaqueRate": 0.462,
@@ -413,7 +413,7 @@
         "id": 41,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT1_9-2.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT1_9-2.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT1_9-2.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT1_9-2.tif.info",
         "plaqueRate": 0.27,
@@ -423,7 +423,7 @@
         "id": 42,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-3.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_2-3.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-3.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_2-3.tif.info",
         "plaqueRate": 0.667,
@@ -433,7 +433,7 @@
         "id": 43,
         "type": "he",
         "location": "AR",
-        "path": "/usr/local/hdd/aorta_images/HE/ZT13_9-1.tif.small.tif",
+        "path": "/usr/local/hdd/aorta_images/HE/ZT13_9-1.tif",
         "png_path": "/usr/local/hdd/aorta_images/HE/ZT13_9-1.tif.small.tif.png",
         "info_path": "/usr/local/hdd/aorta_images/HE/ZT13_9-1.tif.info",
         "plaqueRate": 0.734,
