--- a/server/configs/scheme_config.json
+++ b/server/configs/scheme_config.json
@@ -3,7 +3,7 @@
         "id": 0,
         "type": "scheme",
         "type_det": ["no"],
-        "color": "#ffff00",
+        "color": "#f0ff00",
         "right": 0,
         "path": "model/no_plaque_slide/no_plaque.stl",
         "png_path": "data/models/no_plaque_slide/no_plaque.small.png",
@@ -13,7 +13,7 @@
         "id": 1,
         "type": "scheme",
         "type_det": ["mini"],
-        "color": "#99ff33",
+        "color": "#00b9ff",
         "right": 0,
         "path": "model/mini_plaque_slide/mini_plaque.stl",
         "png_path": "data/models/mini_plaque_slide/mini_plaque.small.png",
@@ -23,7 +23,7 @@
         "id": 3,
         "type": "scheme",
         "type_det": ["massive"],
-        "color": "#00ccff",
+        "color": "#000090",
         "right": 0,
         "path": "model/massive_plaque/massive_plaque.stl",
         "png_path": "data/models/massive_plaque/massive_plaque.small.png",
@@ -33,7 +33,7 @@
         "id": 2,
         "type": "scheme",
         "type_det": ["medium"],
-        "color": "#00ff99",
+        "color": "#ea22d2",
         "right": 1,
         "path": "model/medium_plaque/medium_plaque.stl",
         "png_path": "data/models/medium_plaque/medium_plaque.small.png",
@@ -43,7 +43,7 @@
         "id": 4,
         "type": "scheme",
         "type_det": ["rupture"],
-        "color": "#ff0000",
+        "color": "#04ffac",
         "right": 1,
         "path": "model/rupture_plaque/rupture_plaque.stl",
         "png_path": "data/models/rupture_plaque/rupture_plaque.small.png",
