--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,9 @@
     "react-scroll": "^1.7.16",
     "react-scrollable-anchor": "^0.6.1",
     "react-table-6": "^6.11.0",
+    "reaviz": "^8.1.3",
+    "plotly.js": "^1.54.1",
+    "react-plotly.js": "^2.4.0",
     "tether": "^1.4.4",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "three": "0.101.0",
