super fast model rendering

--- a/server/configs/scheme_config.json
+++ b/server/configs/scheme_config.json
@@ -3,9 +3,9 @@
         "id": 0,
         "type": "scheme",
         "type_det": [],
-        "color": "#f0ff00",
+        "color": "#5d2a9f",
         "right": 0,
-        "path": "../data/model/no_plaque_slide/no_plaque.stl",
+        "path": "model/no_plaque_slide/no_plaque.small.stl",
         "png_path": "../data/models/no_plaque_slide/no_plaque.small.png",
         "info_path": "../data/models/no_plaque_slide/no_plaque.info"
     },
@@ -15,7 +15,7 @@
         "type_det": ["plaque"],
         "color": "#00b9ff",
         "right": 0,
-        "path": "../data/model/mini_plaque_slide/mini_plaque.stl",
+        "path": "model/mini_plaque_slide/mini_plaque.small.stl",
         "png_path": "../data/models/mini_plaque_slide/mini_plaque.small.png",
         "info_path": "../data/models/mini_plaque_slide/mini_plaque.info"
     },
@@ -25,7 +25,7 @@
         "type_det": ["plaque"],
         "color": "#000090",
         "right": 0,
-        "path": "../data/model/massive_plaque/massive_plaque.stl",
+        "path": "model/massive_plaque/massive_plaque.small.stl",
         "png_path": "../data/models/massive_plaque/massive_plaque.small.png",
         "info_path": "../data/models/massive_plaque/massive_plaque.info"
     },
@@ -35,7 +35,7 @@
         "type_det": ["plaque"],
         "color": "#ea22d2",
         "right": 1,
-        "path": "../data/model/medium_plaque/medium_plaque.stl",
+        "path": "model/medium_plaque/medium_plaque.small.stl",
         "png_path": "../data/models/medium_plaque/medium_plaque.small.png",
         "info_path": "../data/models/medium_plaque/medium_plaque.info"
     },
@@ -45,7 +45,7 @@
         "type_det": ["plaque"],
         "color": "#04ffac",
         "right": 1,
-        "path": "../data/model/rupture_plaque/rupture_plaque.stl",
+        "path": "model/rupture_plaque/rupture_plaque.small.stl",
         "png_path": "../data/models/rupture_plaque/rupture_plaque.small.png",
         "info_path": "../data/models/rupture_plaque/rupture_plaque.info"
     }
