--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,8 @@
     "react-scroll": "^1.7.16",
     "react-scrollable-anchor": "^0.6.1",
     "react-table-6": "^6.11.0",
-    "reaviz": "^8.1.3",
+    "reaviz": "^9.0.1",
+    "transformation-matrix": "^2.4.0",
     "plotly.js": "^1.54.1",
     "react-plotly.js": "^2.4.0",
     "tether": "^1.4.4",
@@ -117,7 +118,7 @@
     "style-loader": "^0.19.1",
     "transfer-webpack-plugin": "^0.1.4",
     "ts-loader": "^7.0.3",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
