--- a/server/configs/scheme_config.json
+++ b/server/configs/scheme_config.json
@@ -1,52 +1,105 @@
 [
+
     {
         "id": 0,
         "type": "scheme",
         "type_det": [],
         "color": "#5d2a9f",
         "right": 0,
-        "path": "model/no_plaque_slide/no_plaque.small.stl",
+        "path": "../data/models/no_plaque_slide/no_plaque.small.stl",
         "png_path": "../data/models/no_plaque_slide/no_plaque.small.png",
         "info_path": "../data/models/no_plaque_slide/no_plaque.info"
     },
     {
         "id": 1,
         "type": "scheme",
-        "type_det": ["plaque"],
+        "type_det": ["aorta", "plaque"],
         "color": "#00b9ff",
         "right": 0,
-        "path": "model/mini_plaque_slide/mini_plaque.small.stl",
+        "path": "../data/models/mini_plaque_slide/mini_plaque.small.stl",
         "png_path": "../data/models/mini_plaque_slide/mini_plaque.small.png",
         "info_path": "../data/models/mini_plaque_slide/mini_plaque.info"
     },
     {
         "id": 3,
         "type": "scheme",
-        "type_det": ["plaque"],
+        "type_det": ["aorta", "plaque"],
         "color": "#000090",
         "right": 0,
-        "path": "model/massive_plaque/massive_plaque.small.stl",
+        "path": "../data/models/massive_plaque/massive_plaque.small.stl",
         "png_path": "../data/models/massive_plaque/massive_plaque.small.png",
         "info_path": "../data/models/massive_plaque/massive_plaque.info"
     },
     {
         "id": 2,
         "type": "scheme",
-        "type_det": ["plaque"],
+        "type_det": ["aorta", "plaque"],
         "color": "#ea22d2",
         "right": 1,
-        "path": "model/medium_plaque/medium_plaque.small.stl",
+        "path": "../data/models/medium_plaque/medium_plaque.small.stl",
         "png_path": "../data/models/medium_plaque/medium_plaque.small.png",
         "info_path": "../data/models/medium_plaque/medium_plaque.info"
     },
     {
         "id": 4,
         "type": "scheme",
-        "type_det": ["plaque"],
+        "type_det": ["aorta", "plaque"],
         "color": "#04ffac",
         "right": 1,
-        "path": "model/rupture_plaque/rupture_plaque.small.stl",
+        "path": "../data/models/rupture_plaque/rupture_plaque.small.stl",
         "png_path": "../data/models/rupture_plaque/rupture_plaque.small.png",
         "info_path": "../data/models/rupture_plaque/rupture_plaque.info"
+    }
+
+    ,
+    {
+        "id": "mem1",
+        "type": "scheme",
+        "type_det": ["aorta", "plaque"],
+        "color": "#264653",
+        "selected_color": "#00567A",
+        "right": 0,
+        "path": "../data/models/base/membrane1.small.stl",
+        "bg_elem": true
+    },
+    {
+        "id": "mem2",
+        "type": "scheme",
+        "type_det": ["aorta", "plaque"],
+        "color": "#2A9D8F",
+        "selected_color": "#00C7B3",
+        "right": 0,
+        "path": "../data/models/base/membrane2.small.stl",
+        "bg_elem": true
+    },
+    {
+        "id": "mem3",
+        "type": "scheme",
+        "type_det": ["aorta", "plaque"],
+        "color": "#E9C46A",
+        "selected_color": "#dfaa27",
+        "right": 0,
+        "path": "../data/models/base/membrane3.small.stl",
+        "bg_elem": true
+    },
+    {
+        "id": "plq",
+        "type": "scheme",
+        "type_det": ["aorta", "plaque"],
+        "color": "#F4A261",
+        "selected_color": "#ef7819 ",
+        "right": 0,
+        "path": "../data/models/base/plaque.small.stl",
+        "bg_elem": true
+    },
+    {
+        "id": "rup",
+        "type": "scheme",
+        "type_det": ["aorta", "plaque"],
+        "color": "#E76F51",
+        "selected_color": "#cf401d ",
+        "right": 0,
+        "path": "../data/models/base/macrophage.small.stl",
+        "bg_elem": true
     }
 ]
