fix scRNA-seq models

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,7 @@
         "baseUrl": "./src",
         "allowSyntheticDefaultImports": true,
       },
-    "exclude": ["node_modules"],
+    "exclude": ["./node_modules", "./frontend/node_modules/"],
     "include": [
         "./src/**/*"
     ]
